kubernetes/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-weather-frontend-service
spec:
  selector:
    app: ng-weather
    tier: frontend
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 80 # Inside container
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-weather-app-frontend-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ng-weather
      tier: frontend
  template:
    metadata:
      labels:
        app: ng-weather
        tier: frontend
    spec:
      containers:
        - name: ng-weather
          image: marcingv/ng-weather:latest
          imagePullPolicy: Always
